--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -153,10 +153,10 @@
     <ClCompile Include="AssimpLoader.cpp" />
     <ClCompile Include="BaseScene.cpp" />
     <ClCompile Include="Billborad.cpp" />
-    <ClCompile Include="Block2d.cpp" />
+    <ClCompile Include="Block.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="ResourceLoad.cpp" />
     <ClCompile Include="SceneFactory.cpp" />
-    <ClCompile Include="Stage.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="XAudio.cpp" />
     <ClCompile Include="BasicFrame.cpp" />
@@ -238,10 +238,10 @@
     <ClInclude Include="BaseScene.h" />
     <ClInclude Include="Billborad.h" />
     <ClInclude Include="AbstractBlock.h" />
-    <ClInclude Include="Block2d.h" />
+    <ClInclude Include="Block.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="ResourceLoad.h" />
     <ClInclude Include="SceneFactory.h" />
-    <ClInclude Include="Stage.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="XAudio.h" />
     <ClInclude Include="BasicFrame.h" />
