ResourceLoadクラスの実装と、指定したフォルダ内の画像(png/jpg/jpeg)を一括で読み込んでくれる関数実装。あとSceneManager/SceneFactoryあたり少し弄った

--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="AssimpLoader.cpp" />
     <ClCompile Include="BaseScene.cpp" />
     <ClCompile Include="Billborad.cpp" />
+    <ClCompile Include="ResourceLoad.cpp" />
     <ClCompile Include="SceneFactory.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="XAudio.cpp" />
@@ -236,6 +237,7 @@
     <ClInclude Include="BaseScene.h" />
     <ClInclude Include="Billborad.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ResourceLoad.h" />
     <ClInclude Include="SceneFactory.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="XAudio.h" />
